--- a/src/Sanz.UUIDDatatype/Sanz.UUIDDatatype.csproj
+++ b/src/Sanz.UUIDDatatype/Sanz.UUIDDatatype.csproj
@@ -255,6 +255,9 @@
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.controller.js" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.htm" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.resource.js" />
+    <None Include="App_Plugins\SanzUUIDDatatype\package.manifest" />
+    <Content Include="App_Plugins\SanzUUIDDatatype\app.js" />
+    <Content Include="App_Plugins\SanzUUIDDatatype\app.html" />
     <Content Include="config\grid.editors.config.js" />
     <Content Include="config\Lang\cs-CZ.user.xml" />
     <Content Include="config\Lang\da-DK.user.xml" />
