--- a/src/Sanz.UUIDDatatype/Sanz.UUIDDatatype.csproj
+++ b/src/Sanz.UUIDDatatype/Sanz.UUIDDatatype.csproj
@@ -307,6 +307,7 @@
     <Content Include="config\BackOfficeTours\getting-started.json" />
     <Content Include="config\applications.config" />
     <Content Include="config\404handlers.config" />
+    <Content Include="App_Plugins\SanzUUIDDatatype\Readme.md" />
     <None Include="packages.config" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
