--- a/src/Sanz.UUID/Sanz.UUID.nuspec
+++ b/src/Sanz.UUID/Sanz.UUID.nuspec
@@ -1,14 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <package xmlns="http://schemas.microsoft.com/packaging/2012/06/nuspec.xsd">
   <metadata>
-    <id>SanzUUID</id>
+    <id>Sanz.UUIDDatatype</id>
     <version>0.1.0</version>
     <title>Sanz's Umbraco UUID Data Type</title>
     <authors>Sanjay Bajracharya</authors>
     <owners>Sanjay Bajracharya</owners>
     <requireLicenseAcceptance>false</requireLicenseAcceptance>
     <licenseUrl>https://opensource.org/licenses/MIT</licenseUrl>
-    <description> Create a hidden field that will generate UUID </description>
+    <description>Umbraco Hidden UUID auto generate field </description>
     <releaseNotes></releaseNotes>
     <copyright>Copyright 2019</copyright>
     <tags>Umbraco UUID package</tags>
@@ -19,9 +19,9 @@
     </dependencies>
   </metadata>
   <files>
-    <file src="..\src\Sanz.UUIDDatatype\App_Plugins\SanzUUIDDatatype\app.js" target="content\App_Plugins\SanzUUIDDatatype\app.js" />
-    <file src="..\src\Sanz.UUIDDatatype\App_Plugins\SanzUUIDDatatype\app.html" target="content\App_Plugins\SanzUUIDDatatype\app.html" />
-    <file src="..\src\Sanz.UUIDDatatype\App_Plugins\SanzUUIDDatatype\package.manifest" target="content\App_Plugins\SanzUUIDDatatype\package.manifest" />
-    <file src="..\src\Sanz.UUIDDatatype\App_Plugins\SanzUUIDDatatype\readme.txt" target=""></file>
+    <file src="..\src\Sanz.UUID\App_Plugins\SanzUUIDDatatype\app.js" target="content\App_Plugins\SanzUUIDDatatype\app.js" />
+    <file src="..\src\Sanz.UUID\App_Plugins\SanzUUIDDatatype\app.html" target="content\App_Plugins\SanzUUIDDatatype\app.html" />
+    <file src="..\src\Sanz.UUID\App_Plugins\SanzUUIDDatatype\package.manifest" target="content\App_Plugins\SanzUUIDDatatype\package.manifest" />
+    <file src="..\src\Sanz.UUID\App_Plugins\SanzUUIDDatatype\Readme.md" target=""></file>
   </files>       
 </package>
