--- a/src/Sanz.UUIDDatatype/Sanz.UUIDDatatype.csproj
+++ b/src/Sanz.UUIDDatatype/Sanz.UUIDDatatype.csproj
@@ -255,9 +255,8 @@
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.controller.js" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.htm" />
     <Content Include="App_Plugins\ModelsBuilder\modelsbuilder.resource.js" />
-    <None Include="App_Plugins\SanzUUIDDatatype\package.manifest" />
-    <Content Include="App_Plugins\SanzUUIDDatatype\app.js" />
-    <Content Include="App_Plugins\SanzUUIDDatatype\app.html" />
+    <Content Include="App_Plugins\Sanz.UUID\controllers\Sanz.UUID.Controller.js" />
+    <Content Include="App_Plugins\Sanz.UUID\views\Sanz.UUID.html" />
     <Content Include="config\grid.editors.config.js" />
     <Content Include="config\Lang\cs-CZ.user.xml" />
     <Content Include="config\Lang\da-DK.user.xml" />
@@ -307,7 +306,8 @@
     <Content Include="config\BackOfficeTours\getting-started.json" />
     <Content Include="config\applications.config" />
     <Content Include="config\404handlers.config" />
-    <Content Include="App_Plugins\SanzUUIDDatatype\readme.txt" />
+    <Content Include="App_Plugins\Sanz.UUID\readme.txt" />
+    <Content Include="App_Plugins\Sanz.UUID\package.manifest" />
     <None Include="packages.config" />
     <Content Include="Views\Web.config" />
     <Content Include="Views\Partials\Grid\Editors\Textstring.cshtml" />
@@ -331,6 +331,7 @@
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.Analyzers.dll" />
     <Analyzer Include="..\..\packages\Microsoft.CodeAnalysis.Analyzers.1.0.0\analyzers\dotnet\cs\Microsoft.CodeAnalysis.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
